Fix layout issue with disabled choices

--- a/src/ShiningSword/sass/main.sass
+++ b/src/ShiningSword/sass/main.sass
@@ -166,7 +166,7 @@ html, body
         .choice
             margin-top: 0.2em
             label, span
-                margin-right: 1em
+                margin-right: 3px
         .plainTrait
             margin-right: 0.5em
             margin-left: 0.5em
